--- a/MicroServices.Banking.Domain/MicroServices.Banking.Domain.csproj
+++ b/MicroServices.Banking.Domain/MicroServices.Banking.Domain.csproj
@@ -4,4 +4,11 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="CommandHandlers\" />
+    <Folder Include="Commands\" />
+    <Folder Include="EventHandlers\" />
+    <Folder Include="Events\" />
+  </ItemGroup>
+
 </Project>
