--- a/MicroServices.Transfer.API/appsettings.json
+++ b/MicroServices.Transfer.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TransferDbConnection": "Server=DESKTOP-M1RNJKA;Database=TransferDB;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
